css/app.css
.container {
    padding: 10px 20px 10px 20px;
}

/*header styling*/

.page-header p {
    font-family: sans-serif;
    /*font-size: 55px;*/
    margin-top: 10px;
    margin-bottom: 10px;
}

.headline p {
    /*font-size: 30px;*/
}

.page-header div {
    justify-content: space-between;
}

.page-header {
    box-shadow: 0px 3px 4px 1px #666;
    display: flex;
}

.header-image {
    flex: 1;
}

.heading {
    flex: 10;
}

.three-icon {
    flex: 1;
    padding-right: 5px;
}

/*navbar styling*/

.navbar {
    display: flex;
    padding: 10px;
}

.navbar div {
    flex: 1;
    margin: 0 5% 0 5%;
    font-family: sans-serif;
    color: #666;
    align-items: center;
}

@media(max-width: 500px) {
    .navbar {
        display: none;
    }
}

@media(min-width: 500px) {
    .three-icon {
        display: none;
    }
}

/*jumbotron styling*/

.jumbotron {
    display: flex;
}

.main-image {
    flex: 1;
    position: relative;
    display: block;
    height: 400px;
}

.main-image img {
    height: 100%;
    width: 100%;
}

.headline {
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: black;
    /*height: 30%;*/
    width: 100%;
    /*padding-left: 10px;*/
    color: white;
    opacity: 0.8;
}
@media(min-width: 800px){
    .headline{
        background-color: #fff;
        color: #999;
        opacity: 1;
    }
    .container{
        padding: 10px 100px 10px 100px;
    }
}

/*top news section styling*/

.top-news>div {
    box-shadow: 0px 2px #e6e6e6;
    padding: 20px 0px 20px 0px;
    font-size: 14px;
    font-family: sans-serif;
    color: #666;
}

.top {
    display: flex;
}

.title {
    flex: 7;
    font-size: large;
}

.link {
    flex: 1;
    font-size: large;
}

/*scoreboard stylling*/

.scoreboard table {
    width: 100%;
    text-align: center;
    border-collapse: collapse;
    font-family: sans-serif;
    font-size: 15px;
}

tr th {
    padding: 10px;
    color: #aaa;
}

tr td {
    padding: 10px;
}


@media(max-width: 800px) {
    tr th {
        background-color: #669999;
        color: #fff;
    }
    tr:nth-child(odd) {
        background-color: #e0ebeb;
    }
    
}

/*weather widget*/

.weather {
    font-family: Verdana, sans-serif;
}

.current-weather {
    display: flex;
}

#cur-img {
    flex: 1;
}

#cur-weather {
    flex: 6;
    font-size: 30px;
}

.weather-week {
    display: flex;
    text-align: center;
    /* flex-wrap: wrap; */
}

.weather-week div {
    flex: 1;
    font-size: 15px;
}

.location {
    font-size: xx-large;
    margin-bottom: 0%;
}

.loc-weather {
    margin-top: 0%;
}

.weather-week div img {
    /* height: 100px;
      width: 100px; */
}

.current-weather div img {
    /* height: 200px;
    width: 200px; */
}

/*latest news section*/

.latest {
    display: flex;
    margin-top: 20px;
    box-shadow: 0px 2px #e6e6e6;
}

.latest div {
    font-size: large;
}

.latest-news>div {
    /*box-shadow: 0px 2px #e6e6e6;*/
    padding: 10px;
    font-size: 14px;
    font-family: sans-serif;
    color: #666;
    margin-top: 10px;
}

.image {
    min-height: 100px;
}

.image img {
    height: 100px;
    float: left;
}

#last-news {
    box-shadow: 0px 2px #e6e6e6;
}

/*footer section*/

.footer {
    display: flex;
    margin-top: 20px;
    padding: 20px 0px 20px 40px;
    font-size: 15px;
    font-family: Verdana, sans-serif;
    box-shadow: 0px 7px 8px 0px #666;
    margin-bottom: 40px;
}

.footer div {
    padding-right: 10px;
}

.contact {
    flex: 1;
}

.follow {
    flex: 1;
}

.rss {
    flex: 2;
}

/*for switching in case of tablet view*/

@media (min-width: 500px) and (max-width: 800px) {
    .switch-container {
        display: flex;
        flex-wrap: wrap;
    }
    .jumbotron {
        order: 1;
        width: 49%;
    }
    .weather {
        order: 2;
        width: 49%;
        padding-left: 1px;
    }
    .top-news {
        order: 3;
        width: 100%;
    }
    .scoreboard {
        order: 4;
        width: 100%;
    }
    .weather-week {
        flex-wrap: wrap;
    }
}

@media(min-width: 500px) {
    .page-header p {
        font-size: 30px;
    }
}

